# book-manager

./: Cargo.toml
.github/workflows/: ci.yaml
adapter/: Cargo.toml
adapter/migrations/: 20250523091352_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  user.rs
adapter/src/repository/: auth.rs  book.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs
api/src/handler/: auth.rs  health.rs
api/src/model/: book.rs  user.rs
api/src/route/: mod.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/repository/: auth.rs  mod.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/src/: config.rs  env.rs  error.rs
