[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
shared.workspace = true
derive-new.workspace = true
chrono.workspace = true
mockall.workspace = true
serde.workspace = true
uuid.workspace = true
strum.workspace = true
sqlx.workspace = true

[dev-dependencies]
anyhow.workspace = true
